--- a/nijisort.html
+++ b/nijisort.html
@@ -1,23 +1,23 @@
 <html>
 
 <head>
-  <link rel="shortcut icon" href="charasort/src/assets/niji.ico" type="image/x-icon">
-  <link rel="icon" href="charasort/src/assets/niji.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="src/assets/niji.ico" type="image/x-icon">
+  <link rel="icon" href="src/assets/niji.ico" type="image/x-icon">
   <meta charset="utf-8">
   <meta name="og:site_name" content="Nijisanji Character Sorter">
   <meta name="og:description" content="A simple website for sorting Nijisanji livers in a formatted list.">
   <title>Nijisanji Character Sorter</title>
 
-  <link rel="stylesheet" type="text/css" href="charasort/src/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="charasort/src/css/styles.css">
+  <link rel="stylesheet" type="text/css" href="src/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="src/css/styles.css">
 
-  <script src="charasort/src/js/data.js"></script>
-  <script src="charasort/src/js/data/2021-07-05.js"></script>
+  <script src="src/js/data.js"></script>
+  <script src="src/js/data/2021-07-05.js"></script>
 
-  <script src="charasort/src/js/html2canvas.min.js"></script>
-  <script src="charasort/src/js/lz-string.min.js"></script>
-  <script src="charasort/src/js/seedrandom.min.js"></script>
-  <script src="charasort/src/js/main.js"></script>
+  <script src="src/js/html2canvas.min.js"></script>
+  <script src="src/js/lz-string.min.js"></script>
+  <script src="src/js/seedrandom.min.js"></script>
+  <script src="src/js/main.js"></script>
 </head>
 
 <body>
@@ -31,7 +31,7 @@
     </div>
 
     <div class="sorter">
-        <img src="charasort/src/assets/defaultL.jpg" class="left sort image">
+        <img src="src/assets/defaultL.jpg" class="left sort image">
 
         <div class="starting start button">Nijisanji Liver Sorter<br><br>Click to Start!</div>
         <div class="starting load button">Load <span></span></div>
@@ -46,7 +46,7 @@
         <div class="finished getimg button">Generate Image</div>
         <div class="finished list button">Generate Text List</div>
 
-        <img src="charasort/src/assets/defaultR.jpg" class="right sort image">
+        <img src="src/assets/defaultR.jpg" class="right sort image">
 
         <div class="left sort text"><p></p></div>
         <div class="right sort text"><p></p></div>
