--- a/nijisort.html
+++ b/nijisort.html
@@ -13,6 +13,7 @@
 
   <script src="charasort/src/js/data.js"></script>
   <script src="charasort/src/js/data/2021-07-05.js"></script>
+  <script src="charasort/src/js/data/2021-08-04.js"></script>
 
   <script src="charasort/src/js/html2canvas.min.js"></script>
   <script src="charasort/src/js/lz-string.min.js"></script>
@@ -72,6 +73,10 @@
 
         <br><br>
 
+        <p>Updates:</p>
+        <ul>
+            <li>2021-08-04: Added new waves of EN, ID, and JP livers</li>
+        </ul>
         <p>Todo:</p>
         <ul>
             <li>Update formatting</li>
