--- a/nijisort.html
+++ b/nijisort.html
@@ -15,6 +15,7 @@
   <script src="charasort/src/js/data/2021-07-05.js"></script>
   <script src="charasort/src/js/data/2021-08-04.js"></script>
   <script src="charasort/src/js/data/2021-11-25.js"></script>
+  <script src="charasort/src/js/data/2021-12-23.js"></script>
 
   <script src="charasort/src/js/html2canvas.min.js"></script>
   <script src="charasort/src/js/lz-string.min.js"></script>
