--- a/nijisort.html
+++ b/nijisort.html
@@ -16,6 +16,7 @@
   <script src="charasort/src/js/data/2021-08-04.js"></script>
   <script src="charasort/src/js/data/2021-11-25.js"></script>
   <script src="charasort/src/js/data/2021-12-23.js"></script>
+  <script src="charasort/src/js/data/2022-05-24.js"></script>
 
   <script src="charasort/src/js/html2canvas.min.js"></script>
   <script src="charasort/src/js/lz-string.min.js"></script>
