--- a/nijisort.html
+++ b/nijisort.html
@@ -81,6 +81,7 @@
             <li>2021-08-04: Added new waves of EN, ID, and JP livers</li>
             <li>2021-11-25: Added Ethyria members</li>
             <li>2021-12-23: Added Luxiem members</li>
+          <li>2022-05-24: Updated with new and retired members</li>
         </ul>
         <p>Todo:</p>
         <ul>
